<resources>
    <string name="app_name">雄松智课</string>
    <string name="back" >返回</string>
    <string name="determine">确定</string>
    <string name="name">姓名</string>

    <!--MainActivity-->
    <string name="main_homepage" >首页</string>
    <string name="main_curriculum">微课</string>
    <string name="main_teacher">小雄老师</string>
    <string name="main_forum">论坛</string>
    <string name="main_my">我的</string>
    <string name="adout_text">\u3000\u3000雄松智课”是雄松教育自主研发推出的智能在线教学系统，设计并打造智能在线教学系统，以AI(人工智能)技术为基础，融合公司多年的教育辅导培训经验，结合实际教学应用场景，通过结合学员学习行为特征和自身水平，旨在为每位学员提供一套精准化、定制化的高效备考解决方案。</string>



    <string name="inviting_friends_1_1">亲，还没有好友通过您的专属体验二维码加入“雄松智课”。</string>
    <string name="inviting_friends_1_2">快去获取您的专属体验二维码邀请好友加入吧~</string>

    <string name="inviting_friends_qr_help_title_1">1.我居然是推广大使？</string>
    <string name="inviting_friends_qr_help_content_1">没错，您已经是雄松智课的推广大使啦。推广大使肩负“完善自我，帮助他人”的美好使命。我们时刻以你为荣。</string>
    <string name="inviting_friends_qr_help_title_2">2.怎么使用您的专属推广二维码呢？</string>
    <string name="inviting_friends_qr_help_content_2">长按图片即可保存您的二维码图片至手机相册。如果您想邀请他人，通过微信或者QQ将您的二维码发送给他，让他长按识别二维码并下载注册“雄松智课”APP即可。也可直接点击右上角“分享”按钮，一键将您的二维码名片发送给朋友们哦！</string>
    <string name="inviting_friends_qr_help_title_3">3.成为推广大使的好处是？</string>
    <string name="inviting_friends_qr_help_content_3">当您的朋友下载并注册“雄松智课”APP后，您可立即获得600积分奖励，他也可获得60积分，悄悄告诉你，积分可以兑换优惠券哦！</string>
</resources>
