<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_qr_code_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/baiS"
        android:orientation="vertical"
        android:paddingBottom="@dimen/x10"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/x20"
            android:text="@string/inviting_friends_qr_help_title_1"
            android:textColor="#31ac7d"
            android:textSize="@dimen/x30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/x20"
            android:paddingRight="@dimen/x20"
            android:text="@string/inviting_friends_qr_help_content_1"
            android:textColor="@color/heiS" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x15"
            android:padding="@dimen/x20"
            android:text="@string/inviting_friends_qr_help_title_2"
            android:textColor="#31ac7d"
            android:textSize="@dimen/x30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/x20"
            android:paddingRight="@dimen/x20"
            android:text="@string/inviting_friends_qr_help_content_2"
            android:textColor="@color/heiS" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x15"
            android:padding="@dimen/x20"
            android:text="@string/inviting_friends_qr_help_title_3"
            android:textColor="#31ac7d"
            android:textSize="@dimen/x30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/x20"
            android:paddingRight="@dimen/x20"
            android:text="@string/inviting_friends_qr_help_content_3"
            android:textColor="@color/heiS" />
    </LinearLayout>
</LinearLayout>