<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <FrameLayout
        android:id="@+id/item_framen"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x108"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:background="@drawable/main_backg"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/main_homepage_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_homepage_img"
                style="@style/main_style_img"
                android:src="@drawable/main_home_yes" />

            <TextView
                android:id="@+id/main_homepage_text"
                style="@style/main_style_text"
                android:text="@string/main_homepage"
                android:textColor="@color/danlvS" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_curriculum_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_curriculum_img"
                style="@style/main_style_img"
                android:src="@drawable/main_curriculum_no" />

            <TextView
                android:id="@+id/main_curriculum_text"
                style="@style/main_style_text"
                android:text="@string/main_curriculum"
                android:textColor="@color/huiS" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_teacher_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:padding="@dimen/x10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x115"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/main_teacher" />


            <TextView
                android:id="@+id/main_teacher_text"
                style="@style/main_style_text"
                android:text="@string/main_teacher"
                android:textColor="@color/huiS" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_forum_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_forum_img"
                style="@style/main_style_img"
                android:src="@drawable/main_forum_no" />

            <TextView
                android:id="@+id/main_forum_text"
                style="@style/main_style_text"
                android:text="@string/main_forum"
                android:textColor="@color/huiS" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_my_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_my_img"
                style="@style/main_style_img"
                android:src="@drawable/main_my_no" />

            <TextView
                android:id="@+id/main_my_text"
                style="@style/main_style_text"
                android:text="@string/main_my"
                android:textColor="@color/huiS" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>